--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MedicalApplication_PaisjeMobile</string>
-    <string-array name="schedule_options">
+    <string-array name="scheduler_options">
         <item>Morning</item>
         <item>Afternoon</item>
         <item>Evening</item>
